fix responsive scaling on mobile device

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ textarea {
 	resize:none;
 }
 
-body {
+html, body {
     height: 100%;
 }
 
